# string-feedback-synth

./: .gitmodules  CMakeLists.txt  FeedbackSynth_main.cpp  Makefile  README.md  feedbacksynth.cpp  feedbacksynth_daisy.cpp  feedbacksynth_macos.cpp
Source/: Biquad2Pole.cpp  Biquad2Pole.h  BiquadFilters.cpp  BiquadFilters.h  Controls.cpp  Controls.h  ControlsRegistry.h  DSPUtils.h  EchoDelay.h  FeedbackSynthControls.cpp  FeedbackSynthControls.h  FeedbackSynthEngine.cpp  FeedbackSynthEngine.h  KarplusString.cpp  KarplusString.h  ParameterRegistry.h
Source/memory/: sdram_alloc.cpp  sdram_alloc.h  sdram_pool.h
hardware/: simple-string-feedback.kicad_pro  simple-string-feedback.kicad_sch
macOS/: CMakeLists.txt  FeedbackSynthMIDIHandler.h  MIDI.h  MIDIParser.h  README.md  feedbacksynth_macos.cpp
